added styling, fixed issue with error message when registering

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -115,6 +115,14 @@
   height: 1em;
 }
 
+.alert-danger {
+  color: red;
+}
+
+.alert-primary {
+  color: green;
+}
+
 @media (max-width: 600px) {
   .grid {
     width: 100%;
