--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,3 +15,9 @@ a {
 * {
   box-sizing: border-box;
 }
+
+[data-reach-combobox-input] {
+  padding: 0.5rem;
+  font-size: 1.5rem;
+  width: 100%;
+}
