--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,3 +22,9 @@ a {
   width: 100%;
   border: solid black 2px;
 }
+
+@media screen and (max-width: 720px) {
+  [data-reach-combobox-input] {
+    width: 60%;
+  }
+}
