--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -25,8 +25,8 @@ a {
     border: solid black 2px;
 }
 
-@media screen and (max-width: 720px) {
-    [data-reach-combobox-input] {
-        width: 60%;
-    }
-}
+// @media screen and (max-width: 720px) {
+//     [data-reach-combobox-input] {
+//         width: 60%;
+//     }
+// }
