--- a/styles/export.scss
+++ b/styles/export.scss
@@ -7,3 +7,8 @@
 // components
 @import './components/layout.scss';
 @import './components/navbar.scss';
+@import './components/search.scss';
+@import './components/locate.scss';
+@import './components/createMuralModal.scss';
+@import './components//editMuralModal.scss';
+@import './components/message.scss';
