create helpers folder, add lower case validation to forms, update styles

--- a/styles/components/locate.scss
+++ b/styles/components/locate.scss
@@ -4,8 +4,8 @@
     justify-content: center;
     align-items: center;
     position: absolute;
-    bottom: 3em;
-    left: 4em;
+    bottom: 5%;
+    left: 3%;
 
     button {
         background: none;
@@ -14,8 +14,6 @@
     }
 
     small {
-        // bottom: 2em;
-        // left: 1em;
         background: none;
         border: none;
         z-index: 10;
