--- a/styles/pages/index.scss
+++ b/styles/pages/index.scss
@@ -25,6 +25,12 @@
         background-color: white;
     }
 
+    @media screen and (max-width: 400px) {
+        h1 {
+            top: 10rem;
+        }
+    }
+
     p {
         margin: 0.3rem 0;
     }
