add custom title depending on page loaded, add default inputs to editMuralModal, update styling

--- a/styles/pages/login.scss
+++ b/styles/pages/login.scss
@@ -6,6 +6,8 @@
     justify-content: center;
     align-items: center;
     border-radius: 10px;
+    border: 2px white solid;
+    z-index: 11;
     padding: 1em;
 
     .form-div {
