--- a/styles/components/editMuralModal.scss
+++ b/styles/components/editMuralModal.scss
@@ -33,6 +33,8 @@
         margin: 1.75rem auto;
         border-radius: 3px;
         max-width: 90%;
+        border: 2px white solid;
+        z-index: 11;
         padding: 1em;
 
         img {
